# awareness_navigation

./: .gitignore  README.md  tags
classifier_hsr/: CMakeLists.txt  package.xml
classifier_hsr/scripts/: gui_test2.py  omni_actionlib.py  omni_velocity_gui.py
classifier_hsr/src/: classifier_test.cpp
despot/: CMakeLists.txt  package.xml  tags
despot/.deps/: evaluator.d  evaluator.de  simple_tui.d  simple_tui.de  util_test.d  util_test.de
despot/data/: GridBelief_18231029.csv  GridBelief_1823104.csv  GridBelief_18231045.csv  GridBelief_18231225.csv  GridBelief_18231239.csv  GridBelief_1823126.csv  GridBelief_1823242.csv  GridBelief_1823314.csv  GridBelief_1823945.csv  GridBelief_182396.csv  GridBelief_1902228.csv  GridBelief_1902643.csv  GridBelief_1910244.csv  GridBelief_19103412.csv  GridBelief_19103418.csv  GridBelief_19103434.csv  GridBelief_19103450.csv  GridBelief_1910355.csv  GridBelief_19113457.csv  GridBelief_19113520.csv  GridBelief_19113538.csv  GridBelief_19113556.csv  GridBelief_19113611.csv  GridBelief_19113627.csv  GridBelief_19113641.csv  GridBelief_19113715.csv  GridBelief_1911372.csv  GridBelief_19113810.csv  GridBelief_19113825.csv  GridBelief_19114049.csv  GridBelief_1911417.csv  GridBelief_19114213.csv  GridBelief_19114227.csv  GridBelief_19114342.csv  GridBelief_19114356.csv  GridBelief_19114412.csv  GridBelief_19121656.csv  GridBelief_191217.csv  GridBelief_19121711.csv  GridBelief_1912636.csv  (+121 more)
despot/data/03/: GridMappath_1417392.csv  GridMappath_14173948.csv  GridMappath_1417566.csv  GridMappath_151541.csv  GridMappath_15155151.csv  GridMappath_1515529.csv  GridMappath_15155327.csv  GridMappath_15214059_wait.csv  GridMappath_15221157_wait.csv
despot/data_anal/: GridBelief_1902419.csv  GridBelief_19114241.csv  GridMappath_1902228.csv  GridMappath_1902643.csv  GridMappath_19114241.csv
despot/examples/cpp_models/adventurer/: adventurer
despot/examples/cpp_models/chain/: chain
despot/examples/cpp_models/localnavigation/: CMakeLists.txt  original_CMakeLists.txt  package.xml
despot/examples/cpp_models/localnavigation/src/: localnavigation.cpp  localnavigation.h  main.cpp
despot/examples/cpp_models/navigation/: CMakeLists.txt  navigation  package.xml
despot/examples/cpp_models/navigation/src/: main.cpp  navigation.cpp  navigation.h
despot/examples/cpp_models/pathfollowing/: CMakeLists.txt  package.xml
despot/examples/cpp_models/pathfollowing/src/: main.cpp  pathfollowing.cpp  pathfollowing.h  pathfollowingcpp___backup
despot/examples/cpp_models/pocman/: pocman
despot/examples/cpp_models/pocman/src/: pocman.cpp
despot/examples/cpp_models/reg_demo/: regdemo
despot/examples/cpp_models/simpleNavi/: CMakeLists.txt  simple_rs
despot/examples/cpp_models/simpleNavi/src/: main.cpp  simpleNavi.cpp  simpleNavi.h
despot/examples/cpp_models/tag/: lasertag  noisytag  tag
despot/examples/pomdpx_models/: pomdpx
despot/include/despot/: evaluator.h  simple_tui.h
despot/include/despot/core/: pomdp.h
despot/include/despot/util/: coord.h
despot/src/: evaluator.cpp  simple_tui.cpp
despot/src/core/: belief.cpp  lower_bound.cpp  mdp.cpp  policy.cpp  pomdp.cpp
despot/src/solver/: despot.cpp  pomcp.cpp
despot/src/util/: coord.cpp  floor.cpp
edge_leg_detector/: CMakeLists.txt  package.xml
edge_leg_detector/launch/: edge_leg_detector.launch
edge_leg_detector/src/: detector.cpp
edge_leg_detector/src/edge_leg_detector/: detector.cpp
edge_leg_detector/srv/: laser_leg_detector.srv
grid_hsr/: CMakeLists.txt
human_filter/: CMakeLists.txt  package.xml
human_filter/action/: FollowMe.action
human_filter/include/people_tracking_filter/: edge_leg_filter_node.h  followme_action.h  service_test.h
human_filter/scripts/: follow_action.py
human_filter/src/: edge_leg_filter_node.cpp  followme_action.cpp  people_tracking_node.cpp  service_test.cpp
human_filter/srv/: set_target_to_follow.srv
human_tracking/: CMakeLists.txt  package.xml
human_tracking/include/: human_scan.h  humantracking.h
human_tracking/src/: human_scan.cpp  humantracking.cpp  scanning_test.cpp  tracking_test.cpp
navi_mdp/: CMakeLists.txt  package.xml
navi_mdp/config/: aware.rviz
navi_mdp/include/: Dynamic_Manager.h  MDPmanager.h  MapParam.h  PathManager.h  dynamic_Manager.h  dynamic_Manager_backup
navi_mdp/launch/: awareness.launch  mdp_test.launch
navi_mdp/scripts/: base_move.py  gui_move.py  set_initial_pose.sh  sppech.sh  wrist
navi_mdp/src/: Dynamic_Manager.cpp  MDPmanager.cpp  MapParam.cpp  PathManager.cpp  base_actionlib.cpp  dynamic_planner.cpp  follow_test.cpp  global_planner.cpp
villa_navi_service/: CMakeLists.txt
villa_navi_service/include/: navi_service_node.h
villa_navi_service/src/: navi_service_node.cpp  service_test.cpp
villa_navi_service/srv/: GoTargetPos.srv
